--- a/Objects/tokenring_project.build_log.htm
+++ b/Objects/tokenring_project.build_log.htm
@@ -27,10 +27,13 @@ Project File Date:  04/15/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling mac_sender.c...
+compiling mac_receiver.c...
+mac_receiver.c(53): warning:  #223-D: function "memcpy" declared implicitly
+  								memcpy(ptr,data,dataLength);
+mac_receiver.c: 1 warning, 0 errors
 linking...
-Program Size: Code=97700 RO-data=47444 RW-data=101932 ZI-data=80508  
-".\Objects\tokenring_project.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=97948 RO-data=47444 RW-data=101932 ZI-data=80508  
+".\Objects\tokenring_project.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -461,7 +464,7 @@ Package Vendor: Keil
       Include file:  ugfx\src\gwin\gwin_image.h
       Include file:  ugfx\src\gwin\gwin_button.h
       Include file:  ugfx\src\gwin\gwin_radio.h
-Build Time Elapsed:  00:00:07
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
