--- a/Objects/tokenring_project.htm
+++ b/Objects/tokenring_project.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\tokenring_project.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\tokenring_project.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Mon Apr 22 16:21:53 2024
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Wed Apr 24 16:09:35 2024
 <BR><P>
 <H3>Maximum Stack Usage =        576 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -3071,8 +3071,8 @@ Global Symbols
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> main.o(i.main)
 </UL>
-<P><STRONG><a name="[94]"></a>MacReceiver</STRONG> (Thumb, 296 bytes, Stack size 24 bytes, mac_receiver.o(i.MacReceiver))
-<BR><BR>[Stack]<UL><LI>Max Depth = 208<LI>Call Chain = MacReceiver &rArr; osMessageQueuePut &rArr; isrRtxMessageQueuePut &rArr; osRtxPostProcess &rArr; osRtxKernelErrorNotify &rArr; EvrRtxKernelErrorNotify &rArr; EventRecord2 &rArr; EventRecordItem
+<P><STRONG><a name="[94]"></a>MacReceiver</STRONG> (Thumb, 306 bytes, Stack size 32 bytes, mac_receiver.o(i.MacReceiver))
+<BR><BR>[Stack]<UL><LI>Max Depth = 216<LI>Call Chain = MacReceiver &rArr; osMessageQueuePut &rArr; isrRtxMessageQueuePut &rArr; osRtxPostProcess &rArr; osRtxKernelErrorNotify &rArr; EvrRtxKernelErrorNotify &rArr; EventRecord2 &rArr; EventRecordItem
 </UL>
 <BR>[Calls]<UL><LI><a href="#[263]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;calcCheckSum
 <LI><a href="#[18e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osMemoryPoolAlloc
@@ -3086,7 +3086,7 @@ Global Symbols
 <BR><BR>[Stack]<UL><LI>Max Depth = 272<LI>Call Chain = MacSender &rArr; sendToken &rArr; osMessageQueuePut &rArr; isrRtxMessageQueuePut &rArr; osRtxPostProcess &rArr; osRtxKernelErrorNotify &rArr; EvrRtxKernelErrorNotify &rArr; EventRecord2 &rArr; EventRecordItem
 </UL>
 <BR>[Calls]<UL><LI><a href="#[265]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;sendToken
-<LI><a href="#[266]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;calcChecksum
+<LI><a href="#[266]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;calcuCheckSum
 <LI><a href="#[18e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osMemoryPoolAlloc
 <LI><a href="#[18c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osMessageQueuePut
 <LI><a href="#[18a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osMessageQueueGet
@@ -3687,8 +3687,8 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[94]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MacReceiver
 </UL>
 
-<P><STRONG><a name="[266]"></a>calcChecksum</STRONG> (Thumb, 26 bytes, Stack size 8 bytes, mac_sender.o(i.calcChecksum))
-<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = calcChecksum
+<P><STRONG><a name="[266]"></a>calcuCheckSum</STRONG> (Thumb, 26 bytes, Stack size 8 bytes, mac_sender.o(i.calcuCheckSum))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = calcuCheckSum
 </UL>
 <BR>[Called By]<UL><LI><a href="#[95]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MacSender
 </UL>
